--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Conforto térmico</h2>
             <p>O conforto térmico é definido como o estado psicológico de satisfação
                 com o ambiente térmico envolvente. Ter conforto térmico significa que uma
-                pessoa vestindo uma quentidade normal de roupa não seentirá muito frio ou superaquecimento.
+                pessoa vestindo uma quantidade normal de roupa não sentirá muito frio ou superaquecimento.
                 <br>
                 <br>
                 A faixa confortável de temperatura do corpo humano está entre 36 e 37 ° C. Para manter essas
